--- a/scss/components/_cp-rt-card.scss
+++ b/scss/components/_cp-rt-card.scss
@@ -696,6 +696,11 @@
 
         &:hover {
             box-shadow: 0px -6px 50px 0px rgba(0, 0, 0, 0.10);
+            .item-img {
+                img {
+                    filter: blur(2px);
+                }
+            }
             .item-content {
                 background-color: $color-white;
             }
